# sdl2_template

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
