[package]
name = "sdl2_template"
version = "0.1.0"
authors = ["Brendan A R Sechter <sgeos@hotmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
palette = "0.5"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf", "image", "gfx", "mixer"]

