[package]
name = "sdl2_template"
version = "0.1.0"
authors = ["Brendan A R Sechter <sgeos@hotmail.com>"]
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
palette = "0.6.0"

[dependencies.clap]
version = "3.0.7"
features = ["env"]

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["ttf", "image", "gfx", "mixer"]

